# termart

./: .gitignore  README.md  ddata.txt  drawing.sh  pyproject.toml
bash_utils/: color_spectrum  print_color.sh
example_data/: first_licorn.txt  licorn.sh  licorn2.sh  licorn3.sh
termart/: __main__.py  base_colors.py  img_to_txt.py  linux_colors.py  txt_to_bash.py
